--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "csv": "^6.2.0",
+    "csv-parse": "^5.3.0",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
