--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "csv": "^6.2.0",
     "csv-parse": "^5.3.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -20,7 +22,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
