--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1222.0",
     "bcrypt": "^5.0.1",
     "csv": "^6.2.0",
     "csv-parse": "^5.3.0",
