--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.1222.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "csv": "^6.2.0",
     "csv-parse": "^5.3.0",
     "dayjs": "^1.11.5",
@@ -19,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
@@ -34,11 +36,13 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime": "^3.0.1",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "dotenv": "^16.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
