--- a/package.json
+++ b/package.json
@@ -1,61 +1,71 @@
 {
-  "name": "rentaflix",
-  "version": "1.0.0",
-  "main": "server.ts",
-  "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "test": " NODE_ENV=test jest  --runInBand --detectOpenHandles",
-    "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
-  },
-  "dependencies": {
-    "aws-sdk": "^2.1222.0",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.5.1",
-    "csv": "^6.2.0",
-    "csv-parse": "^5.3.0",
-    "dayjs": "^1.11.5",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "handlebars": "^4.7.7",
-    "jsonwebtoken": "^8.5.1",
-    "mime": "^3.0.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.8",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "supertest": "^6.2.4",
-    "swagger-ui-express": "^4.5.0",
-    "tsyringe": "^4.7.0",
-    "typeorm": "0.2.45",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.7",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/mime": "^3.0.1",
-    "@types/multer": "^1.4.7",
-    "@types/nodemailer": "^6.4.6",
-    "@types/supertest": "^2.0.12",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.24.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.2.5",
-    "eslint-plugin-import-helpers": "^1.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.8",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.7.4"
-  }
+    "name": "rentaflix",
+    "version": "1.0.0",
+    "main": "server.ts",
+    "license": "MIT",
+    "scripts": {
+        "build": "babel src  --extensions \".js .ts\" --out-dir dist --copy-files",
+        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+        "test": " NODE_ENV=test jest  --runInBand --detectOpenHandles",
+        "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
+    },
+    "dependencies": {
+        "@babel/preset-typescript": "^7.18.6",
+        "aws-sdk": "^2.1222.0",
+        "bcrypt": "^5.0.1",
+        "class-transformer": "^0.5.1",
+        "csv": "^6.2.0",
+        "csv-parse": "^5.3.0",
+        "dayjs": "^1.11.5",
+        "express": "^4.18.1",
+        "express-async-errors": "^3.1.1",
+        "handlebars": "^4.7.7",
+        "jsonwebtoken": "^8.5.1",
+        "mime": "^3.0.0",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.7.8",
+        "pg": "^8.7.3",
+        "reflect-metadata": "^0.1.13",
+        "supertest": "^6.2.4",
+        "swagger-ui-express": "^4.5.0",
+        "tsyringe": "^4.7.0",
+        "typeorm": "0.2.45",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.19.3",
+        "@babel/core": "^7.19.3",
+        "@babel/node": "^7.19.1",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.19.3",
+        "@babel/preset-env": "^7.19.4",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^28.1.7",
+        "@types/jsonwebtoken": "^8.5.8",
+        "@types/mime": "^3.0.1",
+        "@types/multer": "^1.4.7",
+        "@types/nodemailer": "^6.4.6",
+        "@types/supertest": "^2.0.12",
+        "@types/swagger-ui-express": "^4.1.3",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.39.0",
+        "@typescript-eslint/parser": "^5.39.0",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "babel-plugin-transform-typescript-metadata": "^0.3.2",
+        "dotenv": "^16.0.3",
+        "eslint": "^8.24.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.2.5",
+        "eslint-plugin-import-helpers": "^1.2.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^28.1.3",
+        "prettier": "^2.7.1",
+        "ts-jest": "^28.0.8",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.1.0",
+        "typescript": "^4.7.4"
+    }
 }
