--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "server.ts",
     "license": "MIT",
     "scripts": {
-        "build": "babel src  --extensions \".js .ts\" --out-dir dist --copy-files",
+        "build": "babel src  --extensions \".js,.ts\" --out-dir dist --copy-files",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
         "test": " NODE_ENV=test jest  --runInBand --detectOpenHandles",
@@ -40,12 +40,14 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.19.3",
         "@babel/preset-env": "^7.19.4",
+        "@babel/types": "^7.19.4",
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.7",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/mime": "^3.0.1",
         "@types/multer": "^1.4.7",
+        "@types/node": "^18.11.0",
         "@types/nodemailer": "^6.4.6",
         "@types/supertest": "^2.0.12",
         "@types/swagger-ui-express": "^4.1.3",
