--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "aws-sdk": "^2.1222.0",
         "bcrypt": "^5.0.1",
         "class-transformer": "^0.5.1",
+        "cors": "^2.8.5",
         "csv": "^6.2.0",
         "csv-parse": "^5.3.0",
         "dayjs": "^1.11.5",
