--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -13,18 +13,22 @@ services:
             - POSTGRES_DB=rentx
         volumes:
             - pgdata:/data/postgres
-    app:
-        build: .
-        container_name: rentx
+    redis:
+        image: redis:alpine
         ports:
-            - 8000:8000
-            - 9229:9229
-        volumes:
-            - .:/usr/app
-        links:
-            - database_ignite
-        depends_on:
-            - database_ignite
+            - 6379:6379
+    # app:
+    #     build: .
+    #     container_name: rentx
+    #     ports:
+    #         - 8000:8000
+    #         - 9229:9229
+    #     volumes:
+    #         - .:/usr/app
+    #     links:
+    #         - database_ignite
+    #     depends_on:
+    #         - database_ignite
 volumes:
     pgdata:
         driver: local
