--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,34 @@
-version: "3.7"
+version: '3.7'
 
 services:
-  database_ignite:
-    image: postgres
-    container_name: database_ignite
-    restart: always
-    ports:
-     - 5432:5432
-    environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=ignite
-      - POSTGRES_DB=rentx
-    volumes:
-      - pgdata:/data/postgres
-  app:
-    build: .
-    container_name: rentx
-    ports:
-      - 8000:8000
-      - 9229:9229
-    volumes:
-      - .:/usr/app
-    links: 
-      - database_ignite
-    depends_on:
-      - database_ignite
+    database_ignite:
+        image: postgres
+        container_name: database_ignite
+        restart: always
+        ports:
+            - 5432:5432
+        environment:
+            - POSTGRES_USER=docker
+            - POSTGRES_PASSWORD=ignite
+            - POSTGRES_DB=rentx
+        volumes:
+            - pgdata:/data/postgres
+    redis:
+        image: redis:alpine
+        ports:
+            - 6379:6379
+    # app:
+    #     build: .
+    #     container_name: rentx
+    #     ports:
+    #         - 8000:8000
+    #         - 9229:9229
+    #     volumes:
+    #         - .:/usr/app
+    #     links:
+    #         - database_ignite
+    #     depends_on:
+    #         - database_ignite
 volumes:
-  pgdata:
-    driver: local
+    pgdata:
+        driver: local
