--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@babel/preset-typescript": "^7.18.6",
+        "@types/redis": "^4.0.11",
         "aws-sdk": "^2.1222.0",
         "bcrypt": "^5.0.1",
         "class-transformer": "^0.5.1",
@@ -27,6 +28,8 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.7.8",
         "pg": "^8.7.3",
+        "rate-limiter-flexible": "^2.4.1",
+        "redis": "^4.3.1",
         "reflect-metadata": "^0.1.13",
         "supertest": "^6.2.4",
         "swagger-ui-express": "^4.5.0",
