--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "@babel/preset-typescript": "^7.18.6",
+        "@sentry/node": "^7.17.0",
+        "@sentry/tracing": "^7.17.0",
         "@types/redis": "^4.0.11",
         "aws-sdk": "^2.1222.0",
         "bcrypt": "^5.0.1",
